# ai-video-editor

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  install.sh  pyproject.toml
docs/: architecture-manifesto.md  audit-codebase.md  backlog-director-review.md  design-briefing-and-creative-brief.md  design-editorial-director.md  design-style-presets-visual-monologue.md  design-timeline-mode.md  design_fcpxml_export.md  dev-gemini-timestamp-drift.md  dev-tracing-review.md  feature-preview-editor-mode.md  mazsola2k_deep_dive.md  plan-codebase-hardening.md  plan-llm-architecture.md  product-owner.md  prompt-engineering-cookbook.md  research-llm-orchestration-and-local-models.md
docs/ideas/: The-Art-of-the-Silent-Vlog-A-Guide-to-Text-Driven-Narrative-Vlogging.md
docs/refactor_plan/: llm-architecture-improvement-plan.md
example/: family-hiking-in-Shipai.fcpxml
mac-app/: README.md
mac-app/VX/: Package.swift  README.md
mac-app/docs/: AGENT-DIRECTOR-ARCHITECTURE.md  COMPOSITION-ARCHITECTURE.md  PERFORMANCE.md  PRD.md  SYSTEM-DESIGN.md  UIUX.md
scripts/: run_claude.py  run_editorial.py  run_gemini.py
src/ai_video_editor/: briefing.py  claude_analyze.py  cli.py  config.py  director_prompts.py  director_tools.py  editorial_agent.py  editorial_director.py  editorial_phase1.py  editorial_phase2.py  editorial_phase3.py  editorial_prompts.py  eval.py  fcpxml_export.py  file_cache.py  format_analyzer.py  gemini_analyze.py  (+14 more)
tests/: conftest.py  test_eval.py  test_multi_call_pipeline.py  test_rough_cut_cache.py  test_stage_timing.py  test_versioning.py
(+46 files in other folders)
